# shmulsidian

./: .gitignore  README.md  flake.nix  home-manager.nix
.claude/: vault-config.json
.claude/mcp-servers/: README.md
.claude/projects/-home-shmul95-shmulistan/memory/: MEMORY.md  feedback_no_ai_attribution.md
.claude/skills/k8s-nix-deployment/: SKILL.md
.claude/skills/nix-flake-parts/: SKILL.md
.scripts/: README.md  firecrawl-batch.sh  firecrawl-scrape.sh  transcript-extract.sh
mcp/: pyproject.toml  shmulsidian_mcp.py
mcp/shmulsidian_mcp/: __init__.py  cli.py  index.py  notes.py  server.py
modules/providers/: claude-code.nix  codex.nix  copilot.nix
template/: MEMORY.md
template/group/: .gitignore  WEEKLY_REVIEW.md  flake.nix
template/group/.agents/commands/: wiring.md
template/group/.claude/commands/: wiring.md
template/group/01_Zettelkasten/: README.md
template/group/02_Projects/: README.md
template/group/03_References/: README.md
template/personal/: WIRING.md
