[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shmulsidian-mcp"
version = "0.1.0"
description = "MCP server exposing an Obsidian vault — list/read/create + keyword/semantic/hybrid search."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "sqlite-vec",
    "fastembed>=0.4",
    "pydantic>=2",
    "anyio>=4",
    "uvicorn>=0.30",
    "starlette>=0.37",
]

[project.scripts]
shmulsidian-mcp = "shmulsidian_mcp.cli:main"

[tool.setuptools.packages.find]
include = ["shmulsidian_mcp*"]
